using encryting key

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -5,7 +5,8 @@ on:
 
 #Create env variables for all job
 env:
-  WF_ENV: Available to all jobs
+  #WF_ENV: Available to all jobs
+  WF_ENV:  ${{  secrets. SECRETS_INFO }}
 
 jobs:
   log-env:
