--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -12,6 +12,23 @@ jobs:
   create-issue:
     runs-on: ubuntu-latest
     steps:
+      - name: Push a random file
+        run:   |
+           pwd
+           ls -a
+           git init
+           git remote add origin "https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git"
+           git config --global user.email "hieunguyen@gmail.com"
+           git config --global user.name "hieunguyen"
+           git fetch
+           git checkout master
+           git pull
+           ls -a
+           echo $RANDOM >> random.txt
+           ls -a
+           git add .
+           git commit -m "add random file"
+           git push -u origin master
       - name: Create issue using REST API
         run: |
           curl --request POST \
