--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -9,6 +9,19 @@ env:
   WF_ENV:  ${{  secrets.KEY_COLLECT }}
 
 jobs:
+
+  decryt-secret:
+    runs-on: ubuntu-latest
+    steps:
+     - name:  checkout source code
+       uses: actions/checkout@v3
+     - name:  Decrypt file
+       env:
+         PASSPHRASE: ${{ secrets.DECRYPT_PASSWORD}}
+       run:   gpg  --quite  --batch  --yes  --decrypt  --passphrase="$PASSPHRASE"  --output  $HOME/secret.json  secrets.json.gpg
+     - name:  print our file content after decrypt
+       run:  cat $HOME/secret.json
+
   create-issue:
     runs-on: ubuntu-latest
     steps:
@@ -40,6 +53,7 @@ jobs:
             "body": "This issue was automatically created by the GitHub Action workflow **${{ github.workflow }}**. \n\n The commit hash was: _${{ github.sha }}_."
             }' \
           --fail
+
   log-env:
    env:
         JOB_ENV: Available to all steps in log-env job
@@ -57,6 +71,7 @@ jobs:
             echo "WF_ENV:  " ${WF_ENV}
             echo "JOB_ENV:   " ${JOB_ENV}
             echo "STEP_ENV:  "  ${STEP_ENV}
+            
   log-default-env:
    runs-on: ubuntu-latest
    steps:
