--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -18,7 +18,7 @@ jobs:
      - name:  Decrypt file
        env:
          PASSPHRASE: ${{ secrets.DECRYPT_PASSWORD}}
-       run:   gpg  --quite  --batch  --yes  --decrypt  --passphrase="$PASSPHRASE"  --output  $HOME/secret.json  secrets.json.gpg
+       run:   gpg  --quiet  --batch  --yes  --decrypt  --passphrase="$PASSPHRASE"  --output  $HOME/secret.json  secrets.json.gpg
      - name:  print our file content after decrypt
        run:  cat $HOME/secret.json
 
@@ -71,7 +71,7 @@ jobs:
             echo "WF_ENV:  " ${WF_ENV}
             echo "JOB_ENV:   " ${JOB_ENV}
             echo "STEP_ENV:  "  ${STEP_ENV}
-            
+
   log-default-env:
    runs-on: ubuntu-latest
    steps:
