--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,6 +2,7 @@ name: ENV Variables
 
 on:
   push:
+  pull_request:
 
 #Create env variables for all job
 env:
@@ -24,6 +25,7 @@ jobs:
 
   create-issue:
     runs-on: ubuntu-latest
+    if: github.event_name == 'push'
     steps:
       - name: Push a random file
         run:   |
